Bug 17160 - treat "interrupt -a" like "interrupt" in all-stop mode
Summary: treat "interrupt -a" like "interrupt" in all-stop mode
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: gdb (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: 13.1
Assignee: Tom Tromey
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-15 15:51 UTC by Doug Evans
Modified: 2022-06-14 15:04 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
Project(s) to access:
ssh public key:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Doug Evans 2014-07-15 15:51:03 UTC
Currently "interrupt -a" is flagged as an error in all-stop mode.

-a is meaningless in all-stop mode.

As a user wanting to stop all threads I mightn't really care whether I'm in all-stop or non-stop.  Having to remember which one to use is annoying.
Comment 1 Pedro Alves 2014-07-15 19:14:33 UTC
That'd be fine with me.
Comment 2 Tom Tromey 2022-06-08 15:28:07 UTC
I sent a patch.
Comment 3 Sourceware Commits 2022-06-14 15:04:21 UTC
The master branch has been updated by Tom Tromey <tromey@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=edb6b77c755545afb969fcebfa900b07a4b93c94

commit edb6b77c755545afb969fcebfa900b07a4b93c94
Author: Tom Tromey <tromey@adacore.com>
Date:   Wed Jun 8 09:26:08 2022 -0600

    Allow 'interrupt -a' in all-stop mode
    
    PR gdb/17160 points out that "interrupt -a" errors in all-stop mode,
    but there's no good reason for this.  This patch removes the error.
    
    Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=17160
Comment 4 Tom Tromey 2022-06-14 15:04:53 UTC
Fixed.